<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">4A微学习</string>
    <string name="menu_settings">Settings</string>
    <string name="usename">用户名</string>
    <string name="pwd">密码</string>
    <string name="count">账号</string>
    <string name="phoneNo">手机（可选）</string>
    <string name="phoneNoInfo">手机号码</string>
    <string name="rePwd">记住密码</string>
    <string name="useNameInfo">至少2个字符</string>
    <string name="pwdInfo">至少6位</string>
    <string name="register">注册</string>
    <string name="menutitle">4A微学习</string>
    <string name="courseactivity">选课中心</string>
    <string name="videolearn">视频学习</string>
    <string name="pleaseEnterName">请输入用户名</string>
    <string name="pleaseEnterPwd">请输入密码</string>
    <string name="EnterNameInfo">至少2个字符</string>
    <string name="EnterPwdInfo">至少6位数字</string>
    <string name="EnterPhoneInfo">输入正确的电话号码</string>
    <string name="logining">正在登录</string>
    <string name="registering">正在注册</string>
    <string name="requestTimeout">网络请求失败</string>
    <string name="loginSuccess">登录成功</string>
    <string name="loginPwdFail">抱歉，请勿在其他设备登录</string>
    <string name="userNotexist">用户不存在或者密码错误</string>
    <string name="userExist">用户已存在</string>
    <string name="registeSuccess">注册成功</string>
    <string name="registeFail">注册失败</string>
    <string name="pull_refresh">下拉刷新... </string>
    <string name="last_refresh">最后次刷新:</string>
    <string name="refreshing">刷新中....</string>
    <string name="release_update">松手刷新...</string>
    <string name="loaddata">加载数据中...</string>
    <string name="noNetwork">网络连接失败</string>
    <string name="loading"></string>
     <string name="loadingVideo">加载中...</string>
    <string name="loginFail">登录失败</string>
    <string name="nologining">账户审核中</string>
    <string name="say">大家随便说！</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="limit">少于500个字</string>
    <string name="limitmore">超过了500个字</string>
    <string name="commendsuccess">发表成功</string>
    <string name="commendfail">发表失败</string>
    <string name="sendcommend">发表中...</string>
    <string name="deletecommendsuccess">删除成功</string>
    <string name="deletecommendfail">删除失败</string>
    <string name="deleting">删除中...</string>
    <string name="changePwd">个人中心</string>
    <string name="oldPwd">原始密码</string>
    <string name="newPwd">新密码</string>
    <string name="editagin">再次输入密码</string>
    <string name="pleaseEnter">请正确填写</string>
    <string name="errorPwd">密码输入不一致</string>
    <string name="loginOnline">请在线登录</string>
    <string name="changePwdSuccess">修改成功</string>
    <string name="changePwdfail">修改失败</string>
    <string name="oldPwderro">原始密码错误</string>
    <string name="downloadtitle">缓存</string>
    <string name="newstitle">新闻</string>
    <string name="historytitle">观看记录</string>
    <string name="haddownload">已下载</string>
    <string name="haddone">已做过此调研</string>
    <string name="commitSuccess">提交成功！</string>
    <string name="commitfail">提交失败！</string>
    <string name="evaResultTitle">测评结果</string>
    <string name="forumTitle">论坛</string>
    <string name="mostnews">最新</string>
    <string name="bestposts">精华</string>
    <string name="serchposts">搜索</string>
    <string name="sendposts">发帖</string>
    <string name="myposts">我的</string>
    <string name="exam">考试</string>
    <string name="reserch">调研</string>
    <string name="evaluation">测评</string>
    <string name="getdataerro">没有播放文件</string>
    <string name="posttitle">帖子</string>
    <string name="replySuccess">回复成功</string>
    <string name="replyFail">回复失败</string>
    <string name="pleasesearch">搜索</string>
    <string name="nosearchContent">没有相关内容</string>
    <string name="sendpost">发帖</string>
    <string name="sendpostsuccess">发帖成功</string>
    <string name="sendpostFail">发帖失败，请再次尝试</string>
    <string name="takePictrue">拍照</string>
    <string name="Pictrue">图片</string>
    <string name="cancelPictrue">撤销</string>
    <string name="commitPictrue">提交</string>
    <string name="more4">最多可发4张</string>
    <string name="postentertitle">标题</string>
    <string name="postentercontent">内容</string>
    <string name="finishPost">完成</string>
    <string name="exampro">考试测评</string>
     <string name="pushdetail">内容</string>
    <string name="pleaseenter">请填写空白处</string>
    <string name="searchvideo">搜索</string>
    <string name="shoudiantong">手电筒</string>
    <string name="officedown">文档下载</string>
    <string name="messageTitle">推送历史</string>
    <string name="nolight">手机没有闪光灯</string>
    <string name="haddothisexma">你已答题</string>
    <string name="pleaseExam">请答题</string>
    <string name="noExam">没有题目</string>
    <string name="deletePost">删除</string>
    <string name="deletesuccess">删除成功！</string>
    <string name="deletefail">删除失败！</string>
    <string name="result">扫描结果</string>
    <string name="pleasEnterMsg">请输入内容</string>
    <string name="commitscore">提交分数成功</string>
     <string name="commitscorefail">提交分数失败</string>
    <string name="aboutus">关于我们</string>
    <string name="uploadSuccuss">上传成功</string>
    <string name="uploadfail">上传失败</string>
    <string name="waitUpload">等待上传</string>
    <string name="pleaseentercontent ">请填写搜索内容</string>
    <string name="novideoContent">没有相关内容</string>
    <string name="erweimainfo">将二维码图像置于矩形方框内，离手机摄像头10cm左右，系统自动识别。</string>
    <string name="registerinfo">手机号码是可选的，当你的密码变更时可以提醒你的新密码，有时会接受关于本软件的一些小提示</string>
    <string name="aboutusinfo">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Anyone,anytime,anywhere,anyway!\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;让学习轻松移动起来\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;4A微学习是利用当前移动智能终端的全面普及而有针对性的为企业开发的一套移动学习系统,让企业员工利用碎片时间,自由的学习.\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;企业定制版4A微学习系统，让你能够:\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;随手查阅公司的新闻通知\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;在线视频课程，每天学一点，进步多一点！\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;随时在论坛里与大家交流心得分享知识！\n\t&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;不用笔的考卷，快速得出答案分数，测评报告，查遗补缺！\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;查阅精彩文档资料，边走边听音频书。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;随时接收公司推送的即时信息，比短信还方便!\n</string>
    
    

</resources>