<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/exam_view_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mostnewpost_selector"
            android:text="@string/exam" />

        <Button
            android:id="@+id/reserch_view_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:background="@drawable/mostnewpost_selector"
             android:text="@string/reserch" />
        
         <Button
            android:id="@+id/evaluation_view_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mostnewpost_selector"
            android:text="@string/evaluation"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/transparent" />

</LinearLayout>