<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <FrameLayout
        android:id="@+id/person_layout"
        android:background="@drawable/title_bg"
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <Button
            android:id="@+id/bt_personBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/changePwd"
            android:textColor="@android:color/black"
            android:textSize="25sp" />
    </FrameLayout>

    <TableLayout
        android:id="@+id/table_changePwd"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/person_layout"
        android:layout_centerInParent="true"
        android:gravity="center" >

        <TableRow>

            <EditText
                android:id="@+id/ed_userNamePerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/person_bg"
                android:editable="false"
                android:paddingLeft="40dp" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp" >

            <EditText
                android:id="@+id/ed_userPwdPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pastpwd_bg"
                android:hint="@string/oldPwd"
                android:inputType="textPassword"
                android:paddingLeft="40dp" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp" >

            <EditText
                android:id="@+id/ed_userNewPwdPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/changepwd_bg"
                android:hint="@string/newPwd"
                android:inputType="textPassword"
                android:paddingLeft="40dp" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp" >

            <EditText
                android:id="@+id/ed_userNewPwdPersonSec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/changepwd_bg"
                android:hint="@string/editagin"
                android:inputType="textPassword"
                android:paddingLeft="40dp" />
        </TableRow>

        <TableRow
            android:layout_marginTop="40dp"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <Button
                    android:id="@+id/bt_changePwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bt_change"
                    android:gravity="center" />
            </LinearLayout>

           
        </TableRow>
    </TableLayout>

   

</RelativeLayout>