<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <FrameLayout
        android:id="@+id/sendpost_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/title_bg" >

        <Button
            android:id="@+id/bt_sendpostBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sendpost"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/bt_sendpostComplite"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="5dp"
            android:background="@drawable/buttonbg_selector"
            android:text="@string/finishPost"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/edit_layout"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_below="@id/sendpost_layout"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/ed_sendPostTitle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/sendpost_title"
            android:hint="@string/postentertitle"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/ed_sendPostContent"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_bg"
            android:gravity="left|top"
            android:hint="@string/postentercontent"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/picture_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/edit_layout"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_takePictrue"
                android:layout_width="65dp"
                android:layout_height="40dp"
                android:background="@drawable/takepictrue_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_Pictrue"
                android:layout_width="65dp"
                android:layout_height="40dp"
                android:background="@drawable/localpitrue_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_cancelPictrue"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@drawable/cancelpictrue_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_commitPictrue"
                android:layout_width="65dp"
                android:layout_height="40dp"
                android:background="@drawable/commitpictrue_selector" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/picture_layout"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:gravity="top|center_horizontal"
            android:text="@string/more4"
            android:textSize="20sp" />

        <TableLayout
            android:id="@+id/table_pictrue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/table_bg"
            android:gravity="center" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/iv_one"
                        style="@style/takePhotoIvStyle" />

                    <com.ms.learn.widgets.ProgrDialog
                        android:id="@+id/ProgrDialog_1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_showUploadSuccess_1"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:visibility="gone" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" >

                    <ImageView
                        android:id="@+id/iv_two"
                        style="@style/takePhotoIvStyle" />

                    <com.ms.learn.widgets.ProgrDialog
                        android:id="@+id/ProgrDialog_2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_showUploadSuccess_2"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:visibility="gone" />
                </FrameLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center" >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/iv_three"
                        style="@style/takePhotoIvStyle" />

                    <com.ms.learn.widgets.ProgrDialog
                        android:id="@+id/ProgrDialog_3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_showUploadSuccess_3"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:visibility="gone" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" >

                    <ImageView
                        android:id="@+id/iv_four"
                        style="@style/takePhotoIvStyle" />

                    <com.ms.learn.widgets.ProgrDialog
                        android:id="@+id/ProgrDialog_4"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_showUploadSuccess_4"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:visibility="gone" />
                </FrameLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>